--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-<h2 id="result"></h2>
+<h1>Calcola il prezzo del tuo biglietto</h1>
+
+    <section>
+        <div class="module">
+            <div class="input-item">
+                <label for="nomecognome"> Nome Cognome</label>
+                <input type="text" id="nome">
+            </div>
+            <div class="input-item">
+                <label for="km"> Km da percorrere</label>
+                <input type="text" id="km">
+            </div>
+            <div class="input-item">
+                <label for="anni">Fascia d'età</label>
+                <select id="anni">
+                    <option value=""></option>
+                    <option value="prevede uno sconto del 20%">0-17</option>
+                    <option value="non prevede nessuno sconto">18-65</option>
+                    <option value="prevede uno sconto del 40%">+66</option>
+                </select>
+            </div>
+
+            <div class="buttons">
+                <button id="send">Genera</button>
+                <button id="clear">Annulla</button>
+            </div>
+
+        </div>
+    </section>
+<!-- risultato -->
+    <section class="result-section hidden"> 
+      <h2 id="greeting">Ciao Nome utente</h2>
+      <p id="message"></p>
+      <p id="result"></p>
+    </section>
 
 
 
@@ -15,4 +51,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
